--- a/index.html
+++ b/index.html
@@ -4,5 +4,5 @@
 
 </head><body>
 Hi all,
-This works. I am arjun bhardwaj. And this is my webpage ! Welcome.
+This works. I am Arjun Bhardwaj. And this is my webpage ! Welcome.
 </body></html>
